--- a/apple-pie/index.html
+++ b/apple-pie/index.html
@@ -8,17 +8,26 @@
   </head>
   <body>
     <section class="top-section">
-      <img src="images/apple-pie.jpg" alt="apple-pie" />
-      <h1>Apple Pie</h1>
-      <p>
+      <div>
+        <h1 class="header">Apple Pie</h1>
+      </div>
+
+      <!-- </div> -->
+      <!-- <div class="text-container"> -->
+      <article>
         Apple Pies This was my grandmother's apple pie recipe. I have never seen
         another one quite like it. It will always be my favorite and has won me
         several first place prizes in local competitions. I hope it becomes one
         of your favorites as well!
-      </p>
-      <img src="images/recipe-info.png" alt="recipe-info" />
+      </article>
+      <!-- </div> -->
+
+      <div class="images">
+        <img src="images/recipe-info.png" alt="recipe-info" />
+      </div>
     </section>
     <hr />
+
     <section class="middle-section">
       <h2>Ingredients</h2>
       <ul>
@@ -32,9 +41,12 @@
         <li>1/2 cup packed brown sugar</li>
         <li>8 Granny Smith apples - peeled, cored and sliced</li>
       </ul>
-      <img src="images/cooking-info.png" alt="cooking-info" />
+      <div class="images">
+        <img src="images/cooking-info.png" alt="cooking-info" />
+      </div>
     </section>
     <hr />
+
     <section class="bottom-section">
       <h2>Directions</h2>
       <ol>
